fix google lighthouse issues

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="description" content="CAS Brick Breaker Game">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CAS Brick Breaker Game</title>
+    <meta name="theme-color" content="#333333" />
+    <link rel="manifest" href="./manifest.json">
 </head>
 <body>
 <div id="app"></div>
-<script type="module" src="/src/main.js"></script>
+<script type="module" src="./src/main.js"></script>
 </body>
 </html>
