--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>CAS Brick Breaker Game</title>
     <meta name="theme-color" content="#333333" />
     <link rel="manifest" href="./manifest.json">
+    <link rel="shortcut icon" type="image/png" href="./src/assets/img/icons/brick-breaker.png"/>
 </head>
 <body>
 <div id="app"></div>
