move manifest.json to public dir

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CAS Brick Breaker Game</title>
     <meta name="theme-color" content="#333333"/>
-    <link rel="manifest" href="./manifest.json">
+    <link rel="manifest" href="./public/manifest.json">
     <link rel="shortcut icon" type="image/png" href="./src/assets/img/icons/brick-breaker.png"/>
 <body>
 <div id="app"></div>
