move icons to public dir

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>CAS Brick Breaker Game</title>
     <meta name="theme-color" content="#333333"/>
     <link rel="manifest" href="./public/manifest.json">
-    <link rel="shortcut icon" type="image/png" href="./src/assets/img/icons/brick-breaker.png"/>
+    <link href="public/assets/img/icons/brick-breaker.png" rel="shortcut icon" type="image/png"/>
 <body>
 <div id="app"></div>
 <script type="module" src="./src/main.js"></script>
