--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CAS Brick Breaker Game</title>
     <meta name="theme-color" content="#333333"/>
-    <link rel="manifest" href="./public/manifest.json">
-    <link href="public/assets/img/icons/brick-breaker.png" rel="shortcut icon" type="image/png"/>
+    <link href="./public/img/icons/brick-breaker.png" rel="shortcut icon" type="image/png"/>
 <body>
 <div id="app"></div>
 <script type="module" src="./src/main.js"></script>
