--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>CAS Brick Breaker Game</title>
     <meta name="theme-color" content="#333333"/>
     <link href="./public/img/icons/brick-breaker.png" rel="shortcut icon" type="image/png"/>
+    <link href="/manifest.webmanifest" rel="manifest">
 <body>
 <div id="app"></div>
 <script type="module" src="./src/main.js"></script>
